@@ -482,9 +482,15 @@ instapay:
   login: TEST0
   password:
 
-# Working credentials, no need to replace
 ipg:
   store_id: "YOUR STORE ID"
+  user_id: "YOUR USER ID"
+  password: "YOUR PASSWORD"
+  pem_password: "CERTIFICATE PASSWORD"
+  pem: "YOUR CERTIFICATE WITH PRIVATE KEY"
+
+ipg_ma:
+  store_id: "ONE OF YOUR STORE IDs"
   user_id: "YOUR USER ID"
   password: "YOUR PASSWORD"
   pem_password: "CERTIFICATE PASSWORD"
